--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   Open your Chrome dev tools to see console output and trigger the debugger to
   catch.
 </p>
-
 <script src="./src/00-objectball.js"></script>
 <script src="./src/01-simple-debug.js"></script>
-<!-- <script src="./src/02-advanced-debug.js"></script> -->
+<script src="./src/02-advanced-debug.js"></script>
